---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 14 January 2020
  Changes:
    - Setting for using 'U' to enter/exit vehicles from spidertron now defaults to off
  Bugfixes:
    - Fixed spidertron on vehicle being rendered on the same layer as alt-mode icons causing inconsistent visibility and flickering
    - Fixed spidertron name being lost when entering vehicles
    - Fixed being able to leave spidertron in vehicle when "Enter/exit vehicles from spidertron with standard control 'Enter'" setting is off
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 10 January 2020
  Changes:
    - Improved setting and control descriptions
  Bugfixes:
    - Fixed spidertron being created in the wrong place when exiting a vehicle by pressing 'Enter'
    - Fixed smoke appearing in the wrong place when entering vehicle from spidertron by pressing 'Enter'
  Compatibility:
    - Fixed compatibility with Spidertron Weapon Switcher
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 7 January 2020
  Bugfixes:
    - Fixed crash when a player dies whilst their spidertron is inactive
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 7 January 2020
  Features:
    - Spidertron plays sounds and emits smoke when entering and exiting a vehicle
    - Spidertron now rotates with vehicle whilst on top of it
    - Spidertron fully retracts legs whilst on top of a vehicle (this is because there are no rotation sprites for the legs)
  Changes:
    - Spidertron riding on top of vehicles setting is now on by default and no longer experimental
  Compatibility:
    - Added support for modded spidertrons to ride on vehicles
  Bugfixes:
    - Fixed crash when moving remote connected to inactive spidertron